2002-06-26    <ezk@agora.fsl.cs.sunysb.edu>

	* doc/Makefile.am (install-html): don't use locally hacked
	texi2html features.

	* conf/transp/transp_sockets.c (amu_get_myaddress): Most modern
	systems should use 127.0.0.1 as the localhost address over which
	you can do NFS mounts.  In the past we found that some NFS clients
	may not allow mounts from localhost.  So we used get_myaddress()
	and that seemed to work.  Alas, on some other systems,
	get_myaddress() may return one of the interface addresses at
	random, and thus use a less efficient IP address than 127.0.0.1.
	The solution is to hard-code 127.0.0.1, but still check if
	get_myaddress() returns a different value and warn about it.

	* doc/am-utils.texi: don't use ':' in @cindex entries.

2002-06-25  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* Released beta version 6.1b1

2002-06-24  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* include/am_compat.h: better test for struct netconfig
	(!HAVE_NETCONFIG_H && !HAVE_SYS_NETCONFIG_H)

	* aux/macros/check_nfs_prot_headers.m4: added new header for aix5.1+

	* buildall: fix 'buildall -b' on hpux9 and aix5.1

2002-06-24  Ion Badulescu  <ionut@buggy.badula.org>

	* INSTALL: updated

	* conf/autofs/autofs_solaris_v1.c (autofs_link_mount): compile fix
	(autofs_link_umount): ditto

	* amd/mntfs.c (init_mntfs): don't use autofs if !amd_use_autofs

2002-06-23  Ion Badulescu  <ionut@moisil.badula.org>

	* conf/autofs/autofs_linux.c: compile fixes for autofs v3

2002-06-23  Ion Badulescu  <ionut@moisil.badula.org>

	* conf/autofs/autofs_solaris_v2_v3.c (autofs_mounted): no
	expirations needed;
	(autofs_timeout_mp): likewise

	* conf/autofs/autofs_solaris_v1.c (autofs_mounted): no expirations
	needed;
	(autofs_timeout_mp): likewise

	* conf/autofs/autofs_linux.c (autofs_mounted): set the first
	expiration interval

	* amd/autil.c (am_mounted): call autofs_mounted here, instead of
	in mf_mounted()

	* amd/amd.h (NEVER): moved here from map.c