@@ -16,7 +16,7 @@ $sockaddr = 'S n a4 x8';
 # system requirements:
 # 	must have 'nslookup' and 'hostname' programs.
 
-# $Header: /home/ezk/proj/amd/GIT/cvs/am-utils/scripts/expn.1,v 1.1 1998/11/05 02:04:58 ezk Exp $
+# $Header: /home/ezk/proj/amd/GIT/cvs/am-utils/scripts/expn.1,v 1.2 2002/07/11 14:28:20 ezk Exp $
 
 # TODO:
 #	less magic should apply to command-line addresses
@@ -60,7 +60,7 @@ $sockaddr = 'S n a4 x8';
 #  OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 #  SUCH DAMAGE.
 #
-# This copyright notice derrived from material copyrighted by the Regents
+# This copyright notice derived from material copyrighted by the Regents
 # of the University of California.
 #
 # Contributions accepted.
@@ -258,7 +258,7 @@ while (@hosts) {
 			# on the results of our query until we have looked
 			# at the complete output.  @toFinal stores expansions
 			# that will be final if we take them.  @toExpn stores
-			# expnansions that are not final.  @isValid keeps
+			# expansions that are not final.  @isValid keeps
 			# track of our ability to send mail to each of the
 			# expansions.
 			#
@@ -784,7 +784,7 @@ sub domainify
 	}
 
 	# 
-	# There are several weird situtations that need to be 
+	# There are several weird situations that need to be 
 	# accounted for.  They have to do with domain relay hosts.
 	#
 	# Examples: 
@@ -955,7 +955,7 @@ sub mxredirect
 	return undef;
 }
 # follow mx records, return a hostname
-# also follow temporary redirections comming from &domainify and
+# also follow temporary redirections coming from &domainify and
 # &mxlookup
 sub mx
 {
@@ -1033,7 +1033,7 @@ sub mxlookup
 		}
 		if (/Non-existent domain/) {
 			#
-			# These addresss are hosed.  Kaput!  Dead! 
+			# These addresses are hosed.  Kaput!  Dead! 
 			# However, if we created the address in the
 			# first place then there is a chance of 
 			# salvation.
@@ -1092,7 +1092,7 @@ sub mxunroll
 	print "looking for mxbacktrace{$addr *** $host}\n"
 		if ($debug > 1);
 	while (defined $mxbacktrace{"$addr *** $host"}) {
-		print "Unrolling MX expnasion: \@$host:$addr -> " 
+		print "Unrolling MX expansion: \@$host:$addr -> " 
 			if ($debug || $verbose);
 		$host = $mxbacktrace{"$addr *** $host"};
 		print "\@$host:$addr\n" 
@@ -1316,7 +1316,7 @@ Finally, the
 debug, flag will expose many of the inner workings so that
 it is possible to eliminate bugs.
 .SH ENVIRONMENT
-No enviroment variables are used.
+No environment variables are used.
 .SH FILES
 .PD 0
 .B /tmp/expn$$
